--- a/app/globals.css
+++ b/app/globals.css
@@ -17,17 +17,20 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+* :focus-visible {
+  outline: none !important;
+}
+
+.slick-prev:before, .slick-next:before {
+  display: none !important;
 }
